[package]
name = "cuda-workflow"
version = "0.1.0"
edition = "2021"
description = "DAG execution with cycle detection, retry, dependency unblocking"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Lucineer/cuda-workflow"
readme = "README.md"
keywords = ["ai", "fleet", "agent", "rust"]
categories = ["science"]

[dependencies]
serde = { version = "1", features = ["derive"] }
